language/grammar/tspp/grammar.js
    _property_name: $ => reserved('properties', choice(
      alias(
        choice($.identifier, $._reserved_identifier),
        $.property_identifier,
      ),
      $.string,
      alias(token(integerName()), $.number),
    )),

    public_field_definition: $ => seq(
      repeat(field('decorator', $.decorator)),
      optional($.accessibility_modifier),
      optional('declare'),
      optional('static'),
      optional($.override_modifier),
      optional('readonly'),
      optional('abstract'),
      field('name', $._property_name),
      optional('?'),
      field('type', optional($.type_annotation)),
      optional($._initializer),
    ),

    try_statement: $ => seq(
      'try',
      field('body', $.statement_block),
      optional(field('handler', choice($.catch_match_clause, $.catch_clause))),
      optional(field('finalizer', $.finally_clause)),
    ),

    // override original catch_clause, add optional type annotation
    catch_clause: $ => seq(
      'catch',
      optional(
        choice(
          seq(
            '(',
            field(
              'parameter',
              choice($.identifier, $._destructuring_pattern),
            ),
            optional(field('type', $.type_annotation)),
            ')',
          ),
          field('parameter', choice($.identifier, $._destructuring_pattern)),
        ),
      ),
      field('body', $.statement_block),
    ),

    catch_match_clause: $ => seq(
      'catch',
      'match',
      '(',
      field('value', $.expression),
      ')',
      '{',
      repeat($.match_arm),
      '}',
    ),

    call_expression: $ => choice(
      prec('call', seq(
        field('function', $.expression),
        field('type_arguments', optional($.type_arguments)),
        field('arguments', $.arguments),
      )),
      prec('template_call', seq(
        field('function', choice($.primary_expression, $.new_expression)),
        field('arguments', $.template_string),
      )),
      prec('member', seq(
        field('function', $.primary_expression),
        '?.',
        field('type_arguments', optional($.type_arguments)),
        field('arguments', $.arguments),
      )),
    ),

    ternary_expression: $ => prec.right('ternary', seq(
      field('condition', $.expression),
      alias($._question_token, '?'),
      field('consequence', $.expression),
      ':',
      field('alternative', $.expression),
    )),

    _question_token: _ => token('?'),

    lexical_declaration: $ => prec.right('declaration', seq(
      field('kind', choice('let', 'const')),
      commaSep1($.variable_declarator),
      optional(seq(
        'else',
        field('alternative', $.statement_block),
      )),
      $._semicolon,
    )),

    match_expression: $ => prec(1, seq(
      'match',
      '(',
      field('value', $.expression),
      ')',
      '{',
      repeat($.match_arm),
      '}',
    )),

    match_arm: $ => seq(
      repeat(field('decorator', $.decorator)),
      field('pattern', $.match_pattern),
      optional(seq('if', field('guard', $.expression))),
      '=>',
      field('body', choice($.match_arm_statement, alias($.match_arm_expression_statement, $.expression_statement))),
    ),

    match_arm_statement: $ => choice(
      $.statement_block,
      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.empty_statement,
    ),

    // NOTE #Robustness: a bare expression arm followed by an arm whose pattern
    // starts with '[' or '(' loses the GLR fork to subscript/call continuation;
    // fixing this needs newline awareness in the shared scanner
    match_pattern: $ => prec(1, choice(
      $.union_pattern,
      $.must_pattern,
      $.memory_pattern,
      $.default_pattern,
      $.range_pattern,
      $.match_constructor_pattern,
      $.match_struct_pattern,
      $.match_member_pattern,
      $.tuple_pattern,
      $.rest_pattern,
      $.array,
      $.array_pattern,
      $.match_object_pattern,
      $.literal_type,
      $.identifier,
    )),

    match_object_pattern: $ => seq(
      '{',
      optional(seq(
        commaSep1($.match_object_pattern_property),
        optional(','),
      )),
      '}',
    ),

    match_object_pattern_property: $ => choice(
      $.rest_pattern,
      seq(
        field('name', choice($._property_name, $.computed_property_name)),
        optional(choice(
          seq(':', field('value', $.match_pattern)),
          seq('=', field('default', choice($.literal_type, $.identifier))),
        )),
      ),
    ),

    match_member_pattern: $ => prec(2, seq(
      field('object', $.identifier),
      '.',
      field('property', $.identifier),
    )),

    match_constructor_pattern: $ => prec(2, seq(
      field('name', choice($.identifier, $.nested_identifier)),
      '(',
      commaSep1($.match_pattern),
      optional(','),
      ')',
    )),

    match_struct_pattern: $ => prec(2, seq(
      field('name', choice($.identifier, $.nested_identifier)),
      field('pattern', $.match_object_pattern),
    )),

    try_expression: $ => prec.right(1, alias($.try_statement, $.try_expression)),

    try_propagation_expression: $ => prec.dynamic(1, prec.left('unary', seq(
      field('argument', $._try_propagation_argument),
      token.immediate('?'),
      optional(seq(
        'satisfies',
        field('target', choice(alias($._cast_intersection_type, $.intersection_type), $.type)),
      )),
    ))),

    // the scanner only lexes a ternary question mark when it is detached, so
    // an attached `?` after any of these operands is try-propagation
    _try_propagation_argument: $ => choice(
      $.identifier,
      $.parenthesized_expression,
      $.member_expression,
      $.subscript_expression,
      $.call_expression,
      $.annotation_call_expression,
    ),

    await_try_propagation_expression: $ => prec.right('unary', seq(
      field('operator', $._await_try_propagation_operator),
      field('argument', $.expression),
    )),

    _await_try_propagation_operator: _ => token(prec(2, seq('await', choice('?', '!')))),

    arguments: $ => seq(
      '(',
      optional(seq(
        optional(choice(
          $.expression,
          $.spread_element,
        )),
        repeat(seq(
          ',',
          optional(choice(
            $.expression,
            $.spread_element,
          )),
        )),
      )),
      ')',
    ),

    export_statement: ($, previous) => choice(
      previous,
      seq(
        'export',
        choice(
          seq('*', $._from_clause),
          seq($.namespace_export, $._from_clause),
          seq($.export_clause, $._from_clause),
        ),
        optional($.import_attribute),
        $._semicolon,
      ),
      seq(
        'export',
        'type',
        '*',
        $._from_clause,
        $._semicolon,
      ),
      seq(
        'export',
        'type',
        $.export_clause,
        optional($._from_clause),
        $._semicolon,
      ),
    ),

    non_null_expression: $ => prec.left('unary', seq(
      $.expression, '!',
    )),

    variable_declarator: $ => choice(
      seq(
        field('name', choice(
          $.identifier,
          $._destructuring_pattern,
          $.tuple_pattern,
          $.struct_pattern,
          $.match_constructor_pattern,
          $.literal_binding_pattern,
        )),
        field('type', optional($.type_annotation)),
        optional($._initializer),
      ),
      seq(
        field('name', $.must_binding_pattern),
        field('type', optional($.type_annotation)),
        $._initializer,
      ),
    ),

    method_signature: $ => seq(
      optional($.accessibility_modifier),
      optional('declare'),
      optional('static'),
      optional('readonly'),
      optional($.override_modifier),
      // the modifier form requires whitespace so `virtual:` stays a field name
      optional(alias(token(seq('virtual', /[ \t]+/)), 'virtual')),
      optional('async'),
      optional(choice('get', 'set')),
      field('name', $._property_name),
      optional('?'),
      $._call_signature,
      optional($.where_clause),
    ),

    parenthesized_expression: $ => seq(
      '(',
      seq($.expression, field('type', optional($.type_annotation))),
      ')',
    ),

    declare_function_signature: $ => seq(
      repeat(field('decorator', $.decorator)),
      'declare',
      optional('const'),
      optional('async'),
      'function',
      optional('*'),
      field('name', $.identifier),
      $._call_signature,
      optional($.where_clause),
      choice($._semicolon, $._function_signature_automatic_semicolon),
    ),

    function_declaration: $ => prec.right('declaration', seq(
      repeat(field('decorator', $.decorator)),
      optional('const'),
      optional('async'),
      'function',
      field('name', $.identifier),
      $._call_signature,
      optional($.where_clause),
      field('body', $.statement_block),
      optional($._automatic_semicolon),
    )),

    class_body: $ => seq(
      '{',
      repeat(choice(
        seq(
          repeat(field('decorator', $.decorator)),
          alias($.method_definition_member, $.method_definition),
          optional($._semicolon),
        ),
        seq(
          repeat(field('decorator', $.decorator)),
          $.method_signature,
          choice($._function_signature_automatic_semicolon, $._semicolon, ','),
        ),
        seq(
          $.struct_embedding_member,
          optional(choice($._semicolon, ',')),
        ),
        seq(
          repeat(field('decorator', $.decorator)),
          choice(
            $.class_static_block,
            $.associated_type_declaration,
            $.associated_const_declaration,
            $.const_block_statement,
            $.index_signature,
            $.abstract_method_signature,
          ),
          choice($._semicolon, ','),
        ),
        seq(
          $.public_field_definition,
          choice($._semicolon, ','),
        ),
        ';',
      )),
      '}',
    ),

    method_definition: $ => prec.left(seq(
      optional('static'),
      optional('async'),
      optional(choice('get', 'set')),
      field('name', $._property_name),
      optional('?'),
      $._call_signature,
      optional($.where_clause),
      field('body', $.statement_block),
    )),

    as_expression: $ => prec.left('as', seq(
      $.expression,
      'as',
      choice(
        'const',
        alias($._cast_intersection_type, $.intersection_type),
        $.type,
      ),
    )),

    satisfies_expression: $ => prec.left('as', seq(
      $.expression,
      'satisfies',
      choice(
        alias($._cast_intersection_type, $.intersection_type),
        $.type,
      ),
    )),

    value_satisfies_statement: $ => prec.dynamic(10, prec.right('declaration', seq(
      field('left', $._satisfies_left_expression),
      'satisfies',
      field('right', $.type),
      $._semicolon,
    ))),

    _satisfies_left_expression: $ => choice(
      $.primary_expression,
      $.call_expression,
      $.new_expression,
      $.await_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.update_expression,
      $.as_expression,
      $.range_expression,
    ),

    _cast_intersection_type: $ => prec.right(100, seq(
      $.primary_type,
      '&',
      choice(
        alias($._cast_intersection_type, $.intersection_type),
        $.primary_type,
      ),
    )),

    binary_expression: ($, previous) => choice(
      previous,
      prec.left('binary_shift', seq(
        field('left', $.expression),
        field('operator', choice('<<|', '>>|', '>>>|')),
        field('right', $.expression),
      )),
      prec.left('binary_plus', seq(
        field('left', $.expression),
        field('operator', choice('+%', '+|', '-%', '-|')),
        field('right', $.expression),
      )),
      prec.left('binary_times', seq(
        field('left', $.expression),
        field('operator', choice('*%', '*|')),
        field('right', $.expression),
      )),
      prec.right('binary_exp', seq(
        field('left', $.expression),
        field('operator', choice('**%', '**|')),
        field('right', $.expression),
      )),
      prec.left('binary_relation', seq(
        field('left', $.expression),
        field('operator', 'extends'),
        field('right', $.expression),
      )),
      prec.left('binary_relation', seq(
        field('left', $.expression),
        field('operator', 'is'),
        field('right', $.expression),
      )),
    ),

    struct_declaration: $ => prec.left('declaration', seq(
      repeat(field('decorator', $.decorator)),
      field('place', optional($.placement_modifier)),
      'struct',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      optional($.implements_clause),
      optional($.where_clause),
      field('body', $.class_body),
      optional($._automatic_semicolon),
    )),

    interface_declaration: $ => prec.right('declaration', seq(
      repeat(field('decorator', $.decorator)),
      field('place', optional($.placement_modifier)),
      optional('newtype'),
      'interface',
      field('name', optional($._type_identifier)),
      field('type_parameters', optional($.type_parameters)),
      optional($.extends_type_clause),
      optional($.where_clause),
      field('body', $.interface_body),
    )),

    interface_body: $ => seq(
      '{',
      optional(seq(
        sepBy1(choice(',', $._semicolon), $._interface_member),
        optional(choice(',', $._semicolon)),
      )),
      '}',
    ),

    _interface_member: $ => seq(
      repeat(field('guard', $.static_if_guard)),
      repeat(field('decorator', $.decorator)),
      choice(
        $.associated_type_declaration,
        $.associated_const_declaration,
        prec(1, $.method_signature),
        alias($.method_definition_member, $.method_definition),
        $.property_signature,
        $.call_signature,
        $.construct_signature,
        $.index_signature,
      ),
    ),

    type_alias_declaration: $ => prec('declaration', seq(
      repeat(field('decorator', $.decorator)),
      field('place', optional($.placement_modifier)),
      choice(alias($._type_declaration_keyword, 'type'), 'newtype'),
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      '=',
      field('value', choice($.implements_type, $.type)),
      $._semicolon,
    )),

    associated_type_declaration: $ => seq(
      'type',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      field('constraint', optional(seq(':', $.type))),
      field('value', optional(seq('=', $.type))),
    ),

    required_parameter: $ => seq(
      $._parameter_name,
      field('type', optional($.type_annotation)),
      optional($._initializer),
    ),

    _parameter_name: $ => seq(
      repeat(field('guard', $.static_if_guard)),
      repeat(field('decorator', $.decorator)),
      optional($.accessibility_modifier),
      optional('readonly'),
      field('pattern', choice(
        $.pattern,
        $.this,
        $.receiver_parameter,
        alias('in', $.identifier),
        alias('out', $.identifier),
        alias('match', $.identifier),
      )),
    ),

    // methods bind their receiver through an explicit memory form
    _initializer: $ => (
      seq('=', field('value', choice(
        $.literal_try_propagation_expression,
        $.expression,
        $.if_expression,
        $.loop_expression,
        $.for_expression,
        $.while_expression,
        $.try_expression,
        $.using_assignment_expression,
        $.switch_statement,
        $.labeled_loop_initializer,
      )))
    ),

    type_annotation: $ => seq(
      ':',
      optional(repeat1(field('decorator', $.decorator))),
      $.type,
    ),

    _type_identifier: $ => alias($.identifier, $.type_identifier),
