language/grammar/tspp/test/corpus/expressions/errors.txt
==================================================
Exception handling
:language(tspp)
==================================================

try {}
catch (e: unknown) {}
finally {}

---

(program
  (try_statement
    body: (statement_block)
    handler: (catch_clause
      parameter: (identifier)
      type: (type_annotation
        (predefined_type))
      body: (statement_block))
    finalizer: (finally_clause
      body: (statement_block))))

=======================================
Try propagation expression continuations
:language(tspp)
=======================================

const text = encode()? satisfies string;
const total = encode()? + 1;
const ok = encode()? && ready;
const cast = encode()? as string;
const coalesce = encode()? ?? fallback;
const call = encode()?();
const index = encode()?[0];
const member = (encode()?).field;
const arg = f(encode()?, ready ? left : right);

---

(program
  (lexical_declaration
    (variable_declarator
      (identifier)
      (satisfies_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (predefined_type))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (binary_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (number))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (binary_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (identifier))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (as_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (predefined_type))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (binary_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (identifier))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (call_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (arguments))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (subscript_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (number))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (member_expression
        (parenthesized_expression
          (try_propagation_expression
            (call_expression
              (identifier)
              (arguments))))
        (property_identifier))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (call_expression
        (identifier)
        (arguments
          (try_propagation_expression
            (call_expression
              (identifier)
              (arguments)))
          (ternary_expression
            (identifier)
            (identifier)
            (identifier)))))))

================================
Await try propagation expression
:language(tspp)
================================

const user = await? fetchUser(id);
const fallback = await! fetchUser(id);
const cached = await! user;
const selected = await! result.value;

---

(program
  (lexical_declaration
    (variable_declarator
      (identifier)
      (await_try_propagation_expression
        (call_expression
          (identifier)
          (arguments
            (identifier))))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (await_try_propagation_expression
        (call_expression
          (identifier)
          (arguments
            (identifier))))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (await_try_propagation_expression
        (identifier))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (await_try_propagation_expression
        (member_expression
          (identifier)
          (property_identifier))))))

=======================================
Match statement patterns
:language(tspp)
=======================================

match (value) {
  Some(x) => x;
  Rectangle { width, height } => width;
  Result.Ok => 1;
}

---

(program
  (expression_statement
    (match_expression
      (identifier)
      (match_arm
        (match_pattern
          (match_constructor_pattern
            (identifier)
            (match_pattern
              (identifier))))
        (expression_statement
          (identifier)))
      (match_arm
        (match_pattern
          (match_struct_pattern
            (identifier)
            (match_object_pattern
              (match_object_pattern_property
                (property_identifier))
              (match_object_pattern_property
                (property_identifier)))))
        (expression_statement
          (identifier)))
      (match_arm
        (match_pattern
          (match_member_pattern
            (identifier)
            (identifier)))
        (expression_statement
          (number))))))

=======================================================
Catch match binds errors
:language(tspp)
=======================================================

declare function read(): Result<int, string>;

const value = try {
    read()?;
    1
} catch match (failure) {
    error => {
        error satisfies string;
        0
    }
};
value satisfies int;



---

(program
  (declare_function_signature
    (identifier)
    (formal_parameters)
    (type_annotation
      (generic_type
        (type_identifier)
        (type_arguments
          (type_identifier)
          (predefined_type)))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (try_expression
        (try_expression
          (statement_block
            (expression_statement
              (try_propagation_expression
                (call_expression
                  (identifier)
                  (arguments))))
            (expression_statement
              (number)))
          (catch_match_clause
            (identifier)
            (match_arm
              (match_pattern
                (identifier))
              (match_arm_statement
                (statement_block
                  (value_satisfies_statement
                    (identifier)
                    (predefined_type))
                  (expression_statement
                    (number))))))))))
  (value_satisfies_statement
    (identifier)
    (type_identifier)))

=======================================
Try coalesce and must unwrap
:language(tspp)
=======================================

const a = loadConfig() ?? defaultConfig;
const b = loadNested() ?? defaultConfig;
const config = loadConfig()!;
const adjusted = loadNumber()? - 1;

---

(program
  (lexical_declaration
    (variable_declarator
      (identifier)
      (binary_expression
        (call_expression
          (identifier)
          (arguments))
        (identifier))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (binary_expression
        (call_expression
          (identifier)
          (arguments))
        (identifier))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (non_null_expression
        (call_expression
          (identifier)
          (arguments)))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (binary_expression
        (try_propagation_expression
          (call_expression
            (identifier)
            (arguments)))
        (number)))))

=======================================
Panics and abort calls
:language(tspp)
=======================================

function fail(message: string): never {
    panic(message);
}

function stop(): never {
    abort("corrupt");
}

function impossible(): never {
    unreachable();
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters
      (required_parameter
        (identifier)
        (type_annotation
          (predefined_type))))
    (type_annotation
      (predefined_type))
    (statement_block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (identifier))))))
  (function_declaration
    (identifier)
    (formal_parameters)
    (type_annotation
      (predefined_type))
    (statement_block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (string
              (string_fragment)))))))
  (function_declaration
    (identifier)
    (formal_parameters)
    (type_annotation
      (predefined_type))
    (statement_block
      (expression_statement
        (call_expression
          (identifier)
          (arguments))))))

=======================================
Error result and try carriers
:language(tspp)
=======================================

newtype interface Error {
    display(): string;
    source(): Dynamic<Error> | undefined {
        undefined
    }
}

export struct Ok<T> {
    kind: "Ok" = "Ok";
    value: T;
}

export struct Err<E> {
    kind: "Err" = "Err";
    error: E;
}

export newtype Result<T, E> = Ok<T> | Err<E>;

struct TryContinue<T> {
    kind: "continue" = "continue";
    value: T;
}

struct TryFailure<F> {
    kind: "failure" = "failure";
    failure: F;
}

type TryBranch<T, F> = TryContinue<T> | TryFailure<F>;

newtype interface Try {
    type Value;
    type Failure;

    static fromValue(value: this.Value): this;
    branch(): TryBranch<this.Value, this.Failure>;
}

---

(program
  (interface_declaration
    (type_identifier)
    (interface_body
      (method_signature
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (predefined_type)))
      (method_definition
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (union_type
            (generic_type
              (type_identifier)
              (type_arguments
                (type_identifier)))
            (literal_type
              (undefined))))
        (statement_block
          (expression_statement
            (undefined))))))
  (export_statement
    (struct_declaration
      (type_identifier)
      (type_parameters
        (type_parameter
          (type_identifier)))
      (class_body
        (public_field_definition
          (property_identifier)
          (type_annotation
            (literal_type
              (string
                (string_fragment))))
          (string
            (string_fragment)))
        (public_field_definition
          (property_identifier)
          (type_annotation
            (type_identifier))))))
  (export_statement
    (struct_declaration
      (type_identifier)
      (type_parameters
        (type_parameter
          (type_identifier)))
      (class_body
        (public_field_definition
          (property_identifier)
          (type_annotation
            (literal_type
              (string
                (string_fragment))))
          (string
            (string_fragment)))
        (public_field_definition
          (property_identifier)
          (type_annotation
            (type_identifier))))))
  (export_statement
    (type_alias_declaration
      (type_identifier)
      (type_parameters
        (type_parameter
          (type_identifier))
        (type_parameter
          (type_identifier)))
      (union_type
        (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier)))
        (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier))))))
  (struct_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    (class_body
      (public_field_definition
        (property_identifier)
        (type_annotation
          (literal_type
            (string
              (string_fragment))))
        (string
          (string_fragment)))
      (public_field_definition
        (property_identifier)
        (type_annotation
          (type_identifier)))))
  (struct_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)))
    (class_body
      (public_field_definition
        (property_identifier)
        (type_annotation
          (literal_type
            (string
              (string_fragment))))
        (string
          (string_fragment)))
      (public_field_definition
        (property_identifier)
        (type_annotation
          (type_identifier)))))
  (type_alias_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier))
      (type_parameter
        (type_identifier)))
    (union_type
      (generic_type
        (type_identifier)
        (type_arguments
          (type_identifier)))
      (generic_type
        (type_identifier)
        (type_arguments
          (type_identifier)))))
  (interface_declaration
    (type_identifier)
    (interface_body
      (associated_type_declaration
        (type_identifier))
      (associated_type_declaration
        (type_identifier))
      (method_signature
        (property_identifier)
        (formal_parameters
          (required_parameter
            (identifier)
            (type_annotation
              (associated_type_projection
                (this_type)
                (type_identifier)))))
        (type_annotation
          (this_type)))
      (method_signature
        (property_identifier)
        (formal_parameters)
        (type_annotation
          (generic_type
            (type_identifier)
            (type_arguments
              (associated_type_projection
                (this_type)
                (type_identifier))
              (associated_type_projection
                (this_type)
                (type_identifier)))))))))
